scenarios/calico-istio/istio/apps/guestbook/app/guestbook-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  namespace: guestbook
  labels:
    app: guestbook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
        - name: guestbook
          image: k8s.gcr.io/guestbook:v3
          ports:
            - name: http-server
              containerPort: 3000
