scenarios/calico-istio/istio/apps/guestbook/app/guestbook-destinationRule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: guestbook
  namespace: guestbook
spec:
  host: guestbook.guestbook.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 100ms
        # tcpKeepalive:
        #   time: 7200s
        #   interval: 75s
