scenarios/calico-istio/istio/apps/guestbook/app/guestbook-virtualService.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: guestbook
  namespace: guestbook
spec:
  gateways:
    - istio-system/guestbook-gateway
  hosts:
    - guestbook.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: guestbook.guestbook.svc.cluster.local
            port:
              number: 80
